--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 language: ruby
 sudo: false
 cache: bundler
-env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
+env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333 RBX_RUBY_COMPAT=2.2.2 RBX_VERSION=3.36
 rvm:
   - "2.3.0"
-  - "rbx"
+  - "rbx-3"
 before_script: 'bundle exec appraisal install'
 script: 'bundle exec appraisal rake test'
