--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: false
 cache: bundler
 env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
 rvm: "2.3.0"
+before_install: rvm get stable
 
 matrix:
   include:
@@ -17,5 +18,5 @@ matrix:
     gemfile: gemfiles/rails_4.2.gemfile
   - rvm: "2.3.0"
     gemfile: gemfiles/rails_5.0.gemfile
-  - rvm: "rbx" # Seems like Travis doesn't have an Rbx that runs 5.0 yet
+  - rvm: "rbx-2" # Seems like Travis doesn't have an Rbx that runs 5.0 yet
     gemfile: gemfiles/rails_4.2.gemfile
