--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,19 @@ language: ruby
 sudo: false
 cache: bundler
 env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
-rvm: "2.3.0"
-before_install: rvm get stable
+
+rvm:
+- 2.1.0 # Lowest version officially supported by that gem
+- 2.2.5
+- 2.3.1
+
+gemfile:
+- gemfiles/rails_3.2.gemfile
+- gemfiles/rails_4.1.gemfile
+- gemfiles/rails_4.2.gemfile
+- gemfiles/rails_5.0.gemfile
 
 matrix:
-  include:
-  - rvm: "2.3.0"
-    gemfile: gemfiles/rails_3.2.gemfile
-  - rvm: "2.3.0"
-    gemfile: gemfiles/rails_4.0.gemfile
-  - rvm: "2.3.0"
-    gemfile: gemfiles/rails_4.1.gemfile
-  - rvm: "2.3.0"
-    gemfile: gemfiles/rails_4.2.gemfile
-  - rvm: "2.3.0"
-    gemfile: gemfiles/rails_5.0.gemfile
-  allow_failures:
-  - rvm: "rbx-2" # Seems like Travis doesn't have an Rbx that runs 5.0 yet
-    gemfile: gemfiles/rails_4.2.gemfile
+  exclude:
+  - rvm: 2.1.0
+    gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
