Ensure there are no spaces after lambda arrows throughout the code
This was added to RuboCop by https://github.com/bbatsov/rubocop/pull/3656.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,3 +45,7 @@ Style/MethodName:
 
 Style/WordArray:
   EnforcedStyle: brackets
+
+# ->(...) { ... }
+Style/SpaceInLambdaLiteral:
+  Enabled: true # Default is "require_no_space"
