Enable Style/FrozenStringLiteralComment cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,9 @@ Style/ClassAndModuleChildren:
 Style/EmptyLineBetweenDefs:
   AllowAdjacentOneLineDefs: true
 
+Style/FrozenStringLiteralComment:
+  Enabled: true
+
 Style/IndentationWidth:
   Width: 2
 
