--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32
 rvm:
 - 2.1.0 # Lowest version officially supported by that gem
 - 2.2.5
-- 2.3.1
+- 2.3.3
+- 2.4.0
 
 gemfile:
 - gemfiles/rails_3.2.gemfile
@@ -17,5 +18,11 @@ gemfile:
 
 matrix:
   exclude:
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_3.2.gemfile
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_4.1.gemfile
+  - rvm: 2.4.0
+    gemfile: gemfiles/rails_4.2.gemfile
   - rvm: 2.1.0
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
