--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: ruby
 sudo: false
 cache: bundler
 env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
+before_install:
+  - gem update --system --no-doc
+  - gem install bundler
 
 rvm:
 - 2.1.0 # Lowest version officially supported by that gem
