feat(Generators) move to paths where Rails can find them; fixes so it runs GraphiQL out of the box

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,7 @@ AllCops:
     - 'lib/graphql/language/lexer.rb'
     - 'lib/graphql/language/parser.rb'
     - 'gemfiles/**/*'
-    - 'spec/tmp/**/*'
+    - 'tmp/**/*'
 
 # def ...
 # end
