--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ rvm:
 - 2.2.5
 - 2.3.3
 - 2.4.0
+- jruby-9.1.5.0
 
 gemfile:
 - gemfiles/rails_3.2.gemfile
@@ -20,6 +21,8 @@ gemfile:
 - gemfiles/rails_5.0.gemfile
 
 matrix:
+  allow_failures:
+  - rvm: jruby-9.1.5.0
   exclude:
   - rvm: 2.4.0
     gemfile: gemfiles/rails_3.2.gemfile
@@ -29,3 +32,5 @@ matrix:
     gemfile: gemfiles/rails_4.2.gemfile
   - rvm: 2.1.0
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
+  - rvm: jruby-9.1.5.0
+    gemfile: gemfiles/rails_5.0.gemfile # Rails 5 is not supported atm
