--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ gemfile:
 - gemfiles/rails_4.1.gemfile
 - gemfiles/rails_4.2.gemfile
 - gemfiles/rails_5.0.gemfile
+- gemfiles/rails_5.1.gemfile
 
 matrix:
   allow_failures:
@@ -34,3 +35,7 @@ matrix:
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
   - rvm: jruby-9.1.5.0
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 is not supported atm
+  - rvm: 2.1.0
+    gemfile: gemfiles/rails_5.1.gemfile # Rails 5 requires Ruby 2.2.2+
+  - rvm: jruby-9.1.5.0
+    gemfile: gemfiles/rails_5.1.gemfile # Rails 5 is not supported atm
