--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@
 language: ruby
 sudo: false
 cache: bundler
-env: CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
+env:
+  global:
+    - CODECLIMATE_REPO_TOKEN=f5b27b2e25d3f4e199bb2566fb4fd4507144a004c71d4aa33a32c2df5f940333
+    - JRUBY_OPTS="--debug" # Coverage may be inaccurate without debug flag
 before_install:
   - gem update --system --no-doc
   - gem install bundler
@@ -12,7 +15,7 @@ rvm:
 - 2.2.7
 - 2.3.4
 - 2.4.1
-- jruby-9.1.5.0
+- jruby-9.1.9.0
 
 gemfile:
 - gemfiles/rails_3.2.gemfile
@@ -22,8 +25,6 @@ gemfile:
 - gemfiles/rails_5.1.gemfile
 
 matrix:
-  allow_failures:
-  - rvm: jruby-9.1.5.0
   exclude:
   - rvm: 2.4.1
     gemfile: gemfiles/rails_3.2.gemfile
@@ -33,9 +34,9 @@ matrix:
     gemfile: gemfiles/rails_4.2.gemfile
   - rvm: 2.1.0
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
-  - rvm: jruby-9.1.5.0
+  - rvm: jruby-9.1.9.0
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 is not supported atm
   - rvm: 2.1.0
     gemfile: gemfiles/rails_5.1.gemfile # Rails 5 requires Ruby 2.2.2+
-  - rvm: jruby-9.1.5.0
+  - rvm: jruby-9.1.9.0
     gemfile: gemfiles/rails_5.1.gemfile # Rails 5 is not supported atm
