--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ rvm:
 - 2.4.1
 - jruby-9.1.9.0
 
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database graphql_ruby_test;' -U postgres
+
 gemfile:
 - gemfiles/rails_3.2.gemfile
 - gemfiles/rails_4.1.gemfile
@@ -26,8 +32,7 @@ gemfile:
 
 matrix:
   include:
-  - addons:
-      postgresql: 9.4
+  - env: DATABASE=POSTGRESQL
 
   exclude:
   - rvm: 2.4.1
