Use the normal gemfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ gemfile:
 matrix:
   include:
   - env: DATABASE=POSTGRESQL
-    gemfile: gemfiles/rails_4.2.gemfile
+    gemfile: Gemfile
 
   exclude:
   - rvm: 2.4.1
