test: add a travis build without Rails

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ matrix:
   - env: DATABASE=POSTGRESQL
     gemfile: Gemfile
     rvm: 2.4.1
+  - env: WITHOUT_RAILS=yes
+    gemfile: gemfiles/without_rails.gemfile
+    rvm: 2.4.1
 
   exclude:
   - rvm: 2.4.1
