--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "graphql-pro",
-  "version": "1.0.0",
-  "description": "JavaScript client for graphql-pro",
+  "name": "graphql-ruby-client",
+  "version": "1.0.1",
+  "description": "JavaScript client for graphql-ruby",
   "main": "index.js",
-  "repository": "https://github.com/rmosolgo/graphql-pro-js",
+  "repository": "https://github.com/rmosolgo/graphql-ruby-client",
   "author": "Robert Mosolgo",
   "license": "LGPL-3.0",
   "bin": "./src/cli.js",
