--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,13 @@ before_script:
   - psql -c 'create database graphql_ruby_test;' -U postgres
 
 gemfile:
-- gemfiles/rails_3.2.gemfile
-- gemfiles/rails_4.1.gemfile
-- gemfiles/rails_4.2.gemfile
-- gemfiles/rails_5.0.gemfile
-- gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_3.2.gemfile
+  - gemfiles/rails_4.1.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5.1.gemfile
+  - gemfiles/without_rails.gemfile
+
 
 matrix:
   include:
