--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/rmosolgo/graphql-ruby-client",
   "author": "Robert Mosolgo",
   "license": "LGPL-3.0",
-  "bin": "./src/cli.js",
+  "bin": "./cli.js",
   "devDependencies": {
     "jest": "^20.0.4",
     "nock": "^9.0.14"
