--- a/guides/_config.yml
+++ b/guides/_config.yml
@@ -25,5 +25,5 @@ algolia:
   application_id: '8VO8708WUV'
   index_name:     'prod_graphql_ruby'
 
-plugins:
-  - algoliasearch-jekyll
+gems:
+- algoliasearch-jekyll
