--- a/.travis.yml
+++ b/.travis.yml
@@ -68,9 +68,15 @@ matrix:
     gemfile: gemfiles/rails_4.2.gemfile
   - rvm: 2.1.10
     gemfile: gemfiles/rails_5.0.gemfile # Rails 5 requires Ruby 2.2.2+
-  - rvm: jruby-9.1.14.0
-    gemfile: gemfiles/rails_5.0.gemfile # Rails 5 is not supported atm
   - rvm: 2.1.10
     gemfile: gemfiles/rails_5.1.gemfile # Rails 5 requires Ruby 2.2.2+
   - rvm: jruby-9.1.14.0
-    gemfile: gemfiles/rails_5.1.gemfile # Rails 5 is not supported atm
+    gemfile: gemfiles/rails_3.2.gemfile # JRuby + latest Rails only
+  - rvm: jruby-9.1.14.0
+    gemfile: gemfiles/rails_4.0.gemfile # JRuby + latest Rails only
+  - rvm: jruby-9.1.14.0
+    gemfile: gemfiles/rails_4.1.gemfile # JRuby + latest Rails only
+  - rvm: jruby-9.1.14.0
+    gemfile: gemfiles/rails_4.2.gemfile # JRuby + latest Rails only
+  - rvm: jruby-9.1.14.0
+    gemfile: gemfiles/rails_5.0.gemfile # JRuby + latest Rails only
