--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,4 @@
-exclude_paths:
-- lib/graphql/language/lexer.rb
-- lib/graphql/language/parser.rb
+version: "2"
+exclude_patterns:
+  - "lib/graphql/language/lexer.rb"
+  - "lib/graphql/language/parser.rb"
