--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,4 +2,6 @@ version: "2"
 exclude_patterns:
   - "lib/graphql/language/lexer.rb"
   - "lib/graphql/language/parser.rb"
+  # plugin - duplication - is failing on these
   - "spec/graphql/language/printer_spec.rb"
+  - "lib/graphql/compatibility/query_parser_specification.rb"
